tests/fixtures/readmes/invalid/missing_short.readme
Uploader:     test@example.com (T. Test)
Type:         util/misc
Architecture: m68k-amigaos

Short field is absent.
